# semantic-rs

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  docker.yml
docker/: Cross-x86_64-unknown-linux-gnu.dockerfile  Release.dockerfile
src/: config.rs  error.rs  git.rs  github.rs  logger.rs  main.rs  preflight.rs  toml_file.rs  utils.rs
tests/integration/: integration.bats
tests/integration/fixtures/new-tag/src/: lib.rs
