[package]
name = "semantic-rs"
version = "1.0.0"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Jan-Erik Rediger <janerik@fnordig.de>"]
description = "Automatic crate publishing"
license = "MIT"

[dependencies]
term = "0.2"
regex = "0.1"
semver = "0.9.0"
git2 = "0.7.5"
clog = "0.9.1"
url = "1.2"
clippy = {version = "<0.1.0", optional = true}
travis-after-all = "2.0.0"
clap = "2.32.0"
cargo_toml = "0.8"
env_logger = "0.7"
futures = "0.3"
hubcaps = "0.6"
toml = "0.5"

[features]
default = []
dev = ["clippy"]
