[package]
name = "semantic-rs"
version = "1.0.0"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Jan-Erik Rediger <janerik@fnordig.de>", "Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
edition = "2018"
description = "Automatic crate publishing"
license = "MIT"
repository = "https://github.com/mandrean/semantic-rs"
readme = "README.md"

[dependencies]
cargo_toml = "0.8"
clap = "2.33"
clog = "0.9"
env_logger = { git = "https://github.com/env-logger-rs/env_logger", rev = "b8c3754" }
git2 = "0.13"
log = "0.4"
regex = "1.4"
semver = "0.11"
term = "0.6"
tokio = "0.2"
toml = "0.5"
url = "2.1"

[dependencies.hubcaps]
version = "0.6"
default-features = false
features = ["rustls-tls"]
